test/parser/should_fail/while4.souc.bad
main() = do
	while true
		42
	end while
